# iata_code_fetcher

./: README.md  airport_data_full.jsonl  airport_data_full_processed.jsonl  airport_data_full_unique.jsonl  airport_data_full_unique_processed.jsonl  carrier_data_full.jsonl  carrier_data_full_processed.jsonl  carrier_data_full_unique.jsonl  carrier_data_full_unique_processed.jsonl  pyproject.toml
.github/workflows/: monthly_data_fetch.yml  pylint.yml
iata_code_fetcher/: fetcher.py  process.py  process_airport.py  process_carrier.py
tests/: test_fetcher.py
